# Ecocoding-Optimization-Analysis

./: .gitignore  CREDITS.md  Cargo.toml  README.md
.reuse/: dep5
measurements/: create_csv.sh  i_100.out  i_100.vjoule  i_1000.out  i_1000.vjoule  i_10000.out  i_10000.vjoule  i_100000.out  i_100000.time  i_100000.vjoule  i_1000000.out  i_1000000.time  i_1000000.vjoule  i_12.out  i_12.vjoule  o_100.out  o_100.vjoule  o_1000.out  o_1000.vjoule  o_10000.out  o_10000.vjoule  o_100000.out  o_100000.vjoule  o_1000000.out  o_1000000.vjoule  o_12.out  o_12.vjoule
src/: iterative.rs  lib.rs  main.rs  optimized.rs  result.rs  triplet.rs
