# SPDX-FileCopyrightText: 2023 Davidson <twister@davidson.fr>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "find_pythagorean_triple_by_sum"
description = "Find pythagorean triplets for which members a + b + c corresponding to a given sum (with a < b < c)"
version = "0.1.0"
edition = "2021"

[lib]
name = "fptbs"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
prime-factor = "0.4.3"
itertools = "0.10.5"
clap = { version = "4.1.4", features = ["cargo"] }
